--- a/languages/wp_to_diaspora.pot
+++ b/languages/wp_to_diaspora.pot
@@ -4,14 +4,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP to Diaspora* 1.2.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/wp-to-diaspora\n"
-"POT-Creation-Date: 2015-01-05 04:56:16+00:00\n"
+"POT-Creation-Date: 2015-01-05 14:46-0300\n"
+"PO-Revision-Date: 2015-01-05 14:46-0300\n"
+"Last-Translator: Augusto Bennemann <gutobenn@gmail.com>\n"
+"Language-Team:  <gutobenn@gmail.com>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Vitalie Ciubotaru <vitalie@ciubotaru.tk>\n"
-"Language-Team:  <gutobenn@gmail.com>\n"
-"Language: en\n"
+"X-Generator: Poedit 1.6.10\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-KeywordsList: __;_e;esc_attr_e\n"
+"X-Poedit-SearchPath-0: .\n"
 
 #: wp-to-diaspora.php:50
 msgid "Full entry on"
@@ -25,11 +29,11 @@ msgstr ""
 msgid "Diaspora* Pod"
 msgstr ""
 
-#: wp-to-diaspora.php:113
+#: wp-to-diaspora.php:113 wp-to-diaspora.php:151
 msgid "Username"
 msgstr ""
 
-#: wp-to-diaspora.php:121
+#: wp-to-diaspora.php:121 wp-to-diaspora.php:159
 msgid "Password"
 msgstr ""
 
@@ -46,11 +50,13 @@ msgid "No"
 msgstr ""
 
 #: wp-to-diaspora.php:194
-msgid "Connected to"
+#, php-format
+msgid "Connected to %s"
 msgstr ""
 
 #: wp-to-diaspora.php:202
-msgid "Couldn't connect to Diaspora*: invalid pod, username or password."
+#, php-format
+msgid "Couldn't connect to %s: invalid pod, username or password."
 msgstr ""
 
 #: wp-to-diaspora.php:237
@@ -66,9 +72,6 @@ msgid "https://github.com/gutobenn/wp-to-diaspora"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "Post WordPress posts on Diaspora*"
+msgid "Automatically share WordPress posts on Diaspora*"
 msgstr ""
 
-#. Author of the plugin/theme
-msgid "Augusto Bennemann"
-msgstr ""
