--- a/languages/wp_to_diaspora-ru_RU.po
+++ b/languages/wp_to_diaspora-ru_RU.po
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: POEditor.com\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: lib/class-api.php:173
 msgctxt "Placeholder is the full pod URL."
@@ -38,229 +38,225 @@ msgstr "Ошибка при загрузке аспектов."
 msgid "Error loading services."
 msgstr "Ошибка при загрузке сервисов."
 
-#: lib/class-api.php:441
-#: lib/class-options.php:520
-#: wp-to-diaspora.php:633
+#: lib/class-api.php:441 lib/class-options.php:520 wp-to-diaspora.php:633
 msgid "Public"
 msgstr "Открытый"
 
 #: lib/class-contextual-help.php:53
-#, fuzzy
 msgid "Overview"
-msgstr "Сервисы"
+msgstr "Обзор"
 
 #: lib/class-contextual-help.php:54
-msgid "With WP to diaspora*, sharing your WordPress posts to diaspora* is as easy as ever."
+msgid ""
+"With WP to diaspora*, sharing your WordPress posts to diaspora* is as easy "
+"as ever."
 msgstr ""
+"С WP to diaspora*, репост статей с WordPress в diaspora* стал легче, чем "
+"когда-либо."
 
 #: lib/class-contextual-help.php:56
 msgid "Enter your diaspora* login details on the \"Setup\" tab."
-msgstr ""
+msgstr "На вкладке \"Настройка\" введи данные для логина в diaspora*."
 
 #: lib/class-contextual-help.php:57
 msgid "Define the default posting behaviour on the \"Defaults\" tab."
-msgstr ""
+msgstr "На вкладке \"Значения по умолчанию\" определи настройки репостинга."
 
 #: lib/class-contextual-help.php:58
-#, fuzzy
-msgid "Automatically share your WordPress post on diaspora* when publishing it on your website."
-msgstr "Автоматический репост статей с Wordpress на diaspora*"
+msgid ""
+"Automatically share your WordPress post on diaspora* when publishing it on "
+"your website."
+msgstr ""
+"При публикации на этом вебсайте, втоматически репостить статьи с Wordpress "
+"на diaspora*."
 
 #: lib/class-contextual-help.php:59
-#, fuzzy
 msgid "Check out your new post on diaspora*."
-msgstr "Выбери, какие теги следует репостить в diaspora*."
+msgstr "Просмотреть репост этой статьи в diaspora*."
 
-#: lib/class-contextual-help.php:64
-#: lib/class-options.php:270
+#: lib/class-contextual-help.php:64 lib/class-options.php:270
 msgid "Setup"
 msgstr "Настройка"
 
 #: lib/class-contextual-help.php:65
 msgid "Enter your diaspora* login details to connect your account."
-msgstr ""
+msgstr "Чтобы привязать свою учётную запись в diaspora*, введи данные логина."
 
 #: lib/class-contextual-help.php:67
-#, fuzzy
 msgid "diaspora* Pod"
-msgstr "Сервер Diaspora*"
+msgstr "Сервер diaspora*"
 
 #: lib/class-contextual-help.php:68
 msgid "This is the domain name of the pod you are on (e.g. joindiaspora.com)"
-msgstr ""
+msgstr "Это доменное имя  твоего сервера (напр., joindiaspora.com)"
 
 #: lib/class-contextual-help.php:69
-msgid "Use the \"%s\" button to prepopulate the input field to help choose your pod."
+msgid ""
+"Use the \"%s\" button to prepopulate the input field to help choose your pod."
 msgstr ""
+"Чтобы выбрать свой сервер из списка в поле ввода, используй кнопку \"%s\" "
+"для получения списка."
 
-#: lib/class-contextual-help.php:69
-#: lib/class-options.php:318
+#: lib/class-contextual-help.php:69 lib/class-options.php:318
 msgid "Refresh pod list"
 msgstr "Обновить список серверов"
 
-#: lib/class-contextual-help.php:70
-#: lib/class-options.php:307
+#: lib/class-contextual-help.php:70 lib/class-options.php:307
 #: lib/class-options.php:332
 msgid "Username"
 msgstr "Имя пользователя"
 
 #: lib/class-contextual-help.php:71
 msgid "Your diaspora* username (without the pod domain)."
-msgstr ""
+msgstr "Твоё имя в diaspora* (без доменного имени сервера)."
 
-#: lib/class-contextual-help.php:72
-#: lib/class-options.php:310
+#: lib/class-contextual-help.php:72 lib/class-options.php:310
 #: lib/class-options.php:342
 msgid "Password"
 msgstr "Пароль"
 
 #: lib/class-contextual-help.php:73
 msgid "Your diaspora* password."
-msgstr ""
+msgstr "Твой пароль в diaspora*."
 
-#: lib/class-contextual-help.php:78
-#: lib/class-options.php:266
+#: lib/class-contextual-help.php:78 lib/class-options.php:266
 msgid "Defaults"
 msgstr "Значения по умолчанию"
 
 #: lib/class-contextual-help.php:79
 msgid "Define the default posting behaviour."
-msgstr ""
+msgstr "Определи настройки по умолчанию для репостинга."
 
-#: lib/class-contextual-help.php:81
-#: lib/class-options.php:359
+#: lib/class-contextual-help.php:81 lib/class-options.php:359
 msgid "Post types"
 msgstr "Типы записей"
 
 #: lib/class-contextual-help.php:82
-#, fuzzy
 msgid "Choose the post types that are allowed to be shared to diaspora*."
-msgstr "Выбери, какие теги следует репостить в diaspora*."
+msgstr "Выбери, какие типы можно репостить в diaspora*."
 
-#: lib/class-contextual-help.php:83
-#: lib/class-options.php:362
+#: lib/class-contextual-help.php:83 lib/class-options.php:362
 #: lib/class-options.php:411
 msgid "Post to diaspora*"
 msgstr "Опубликовать на diaspora*"
 
 #: lib/class-contextual-help.php:84
-#, fuzzy
 msgid "Automatically share new posts to diaspora* when publishing them."
-msgstr "Автоматический репост статей с Wordpress на diaspora*"
+msgstr "При публикации новых статей, втоматически репостить их на diaspora*."
 
-#: lib/class-contextual-help.php:85
-#: lib/class-options.php:365
+#: lib/class-contextual-help.php:85 lib/class-options.php:365
 #: lib/class-options.php:428
 msgid "Show \"Posted at\" link?"
 msgstr "Показывать ссылку \"Оригинальная статья находится на\"?"
 
 #: lib/class-contextual-help.php:86
-#, fuzzy
-msgid "Add a link back to your original post, at the bottom of the diaspora* post."
-msgstr "Добавить ссылку на первоисточник."
+msgid ""
+"Add a link back to your original post, at the bottom of the diaspora* post."
+msgstr "В конце сообщения на diaspora* добавить ссылку на первоисточник."
 
-#: lib/class-contextual-help.php:87
-#: lib/class-options.php:368
+#: lib/class-contextual-help.php:87 lib/class-options.php:368
 msgid "Display"
 msgstr "Показать"
 
 #: lib/class-contextual-help.php:88
-msgid "Choose whether you would like to post the whole post or just the excerpt."
-msgstr ""
+msgid ""
+"Choose whether you would like to post the whole post or just the excerpt."
+msgstr "Выбери, хочешь ли ты делать репост целой статьи или только отрывка."
 
-#: lib/class-contextual-help.php:89
-#: lib/class-options.php:371
+#: lib/class-contextual-help.php:89 lib/class-options.php:371
 msgid "Tags to post"
 msgstr "Публикуемые теги"
 
 #: lib/class-contextual-help.php:90
 msgid "You can add tags to your post to make it easier to find on diaspora*."
-msgstr ""
+msgstr "Можешь добавить теги к статье, чтобы её легче было найти в diaspora*."
 
-#: lib/class-contextual-help.php:92
-#: lib/class-contextual-help.php:96
-#: lib/class-options.php:374
-#: lib/class-options.php:455
+#: lib/class-contextual-help.php:92 lib/class-contextual-help.php:96
+#: lib/class-options.php:374 lib/class-options.php:455
 #: lib/class-options.php:475
 msgid "Global tags"
 msgstr "Глобальные теги"
 
 #: lib/class-contextual-help.php:92
 msgid "Tags that apply to all posts."
-msgstr ""
+msgstr "Теги, добавляемые ко всем статьям."
 
-#: lib/class-contextual-help.php:93
-#: lib/class-contextual-help.php:115
-#: lib/class-options.php:456
-#: lib/class-options.php:489
+#: lib/class-contextual-help.php:93 lib/class-contextual-help.php:115
+#: lib/class-options.php:456 lib/class-options.php:489
 msgid "Custom tags"
 msgstr "Кастомные теги"
 
 #: lib/class-contextual-help.php:93
 msgid "Tags that apply to individual posts (can be set on each post)."
 msgstr ""
+"Теги, добавляемые к отдельным статьям (можно выбрать для каждой статьи)."
 
-#: lib/class-contextual-help.php:94
-#: lib/class-options.php:457
-#, fuzzy
+#: lib/class-contextual-help.php:94 lib/class-options.php:457
 msgid "Post tags"
-msgstr "Не публиковать теги"
+msgstr "Теги статей"
 
 #: lib/class-contextual-help.php:94
 msgid "Default WordPress Tags of individual posts."
-msgstr ""
+msgstr "Теги WordPress, добавляемые по умолчанию к отдельным статьям."
 
 #: lib/class-contextual-help.php:97
 msgid "A list of tags that gets added to every post."
-msgstr ""
+msgstr "Список тегов, которые добавляются к каждой статье."
 
-#: lib/class-contextual-help.php:98
-#: lib/class-options.php:377
+#: lib/class-contextual-help.php:98 lib/class-options.php:377
 msgid "Aspects"
 msgstr "Аспекты"
 
 #: lib/class-contextual-help.php:99
 msgid "Decide which of your diaspora* aspects can see your posts."
-msgstr ""
+msgstr "Выбери, какие аспекты в diaspora* могут видеть твои сообщения."
 
 #: lib/class-contextual-help.php:100
 msgid "Use the \"%s\" button to load your aspects from diaspora*."
-msgstr ""
+msgstr "Для загрузки твоих аспектов с diaspora* нажми кнопку \"%s\"."
 
-#: lib/class-contextual-help.php:100
-#: lib/class-options.php:525
+#: lib/class-contextual-help.php:100 lib/class-options.php:525
 msgid "Refresh Aspects"
 msgstr "Обновить список аспектов"
 
-#: lib/class-contextual-help.php:101
-#: lib/class-options.php:380
+#: lib/class-contextual-help.php:101 lib/class-options.php:380
 msgid "Services"
 msgstr "Сервисы"
 
 #: lib/class-contextual-help.php:102
-#, fuzzy
 msgid "Choose the services your new diaspora* post gets shared to."
-msgstr "Выбери сервисы для репостинга."
+msgstr "Выбери сервисы, на которых следует публиковать репост diaspora*."
 
 #: lib/class-contextual-help.php:103
-msgid "Use the \"%s\" button to fetch the list of your connected services from diaspora*."
+msgid ""
+"Use the \"%s\" button to fetch the list of your connected services from "
+"diaspora*."
 msgstr ""
+"Для загрузки списка связанных сервисов из diaspora* нажми кнопку \"%s\"."
 
-#: lib/class-contextual-help.php:103
-#: lib/class-options.php:564
+#: lib/class-contextual-help.php:103 lib/class-options.php:564
 msgid "Refresh Services"
 msgstr "Обновить список сервисов"
 
 #: lib/class-contextual-help.php:108
 msgid "Meta Box"
-msgstr ""
+msgstr "Meta Box"
 
 #: lib/class-contextual-help.php:109
-msgid "The Meta Box is the new \"WP to diaspora*\" box you see when editing a post."
+msgid ""
+"The Meta Box is the new \"WP to diaspora*\" box you see when editing a post."
 msgstr ""
+"Meta Box это новое окошко \"WP to diaspora*\", которое вы видишь, когда "
+"редактируешь статью."
 
 #: lib/class-contextual-help.php:110
-msgid "When creating or editing a post, you will notice a new meta box called \"WP to diaspora*\" which has some options. These options are almost the same as the options you can find in the \"Defaults\" tab on the settings page. These options are post-specific though, meaning they override the global defaults for the post itself. You will see that the default values are filled in automatically, allowing you to change individual ones as you please."
+msgid ""
+"When creating or editing a post, you will notice a new meta box called \"WP "
+"to diaspora*\" which has some options. These options are almost the same as "
+"the options you can find in the \"Defaults\" tab on the settings page. These "
+"options are post-specific though, meaning they override the global defaults "
+"for the post itself. You will see that the default values are filled in "
+"automatically, allowing you to change individual ones as you please."
 msgstr ""
 
 #: lib/class-contextual-help.php:111
@@ -268,20 +264,26 @@ msgid "There are a few important differences to the settings page:"
 msgstr ""
 
 #: lib/class-contextual-help.php:113
-#, fuzzy
 msgid "Already posted to diaspora*"
-msgstr "Уже опубликована на diaspora*."
+msgstr "Уже опубликовано на diaspora*"
 
 #: lib/class-contextual-help.php:114
-msgid "If the post has already been posted to diaspora* a link to the diaspora* post will appear at the top."
+msgid ""
+"If the post has already been posted to diaspora* a link to the diaspora* "
+"post will appear at the top."
 msgstr ""
 
 #: lib/class-contextual-help.php:116
-msgid "A list of tags that gets added to this post. Note that they are seperate from the WordPress post tags!"
+msgid ""
+"A list of tags that gets added to this post. Note that they are seperate "
+"from the WordPress post tags!"
 msgstr ""
 
 #: lib/class-contextual-help.php:118
-msgid "If you don't see the meta box, make sure the post type you're on has been added to the \"Post types\" list on the settings page. Also make sure it has been selected from the \"Screen Options\" at the top of the screen."
+msgid ""
+"If you don't see the meta box, make sure the post type you're on has been "
+"added to the \"Post types\" list on the settings page. Also make sure it has "
+"been selected from the \"Screen Options\" at the top of the screen."
 msgstr ""
 
 #: lib/class-contextual-help.php:122
@@ -298,31 +300,30 @@ msgstr ""
 
 #: lib/class-contextual-help.php:126
 msgid "Report a bug"
-msgstr ""
+msgstr "Сообщить об ошибке"
 
 #: lib/class-contextual-help.php:127
 msgid "Suggest a new feature"
-msgstr ""
+msgstr "Предложить новый функционал"
 
-#: lib/class-contextual-help.php:128
-#: lib/class-contextual-help.php:192
+#: lib/class-contextual-help.php:128 lib/class-contextual-help.php:192
 msgid "Help with translations"
-msgstr ""
+msgstr "Помочь в переводе"
 
-#: lib/class-contextual-help.php:129
-#: lib/class-contextual-help.php:193
+#: lib/class-contextual-help.php:129 lib/class-contextual-help.php:193
 msgid "Make a donation"
-msgstr ""
+msgstr "Сделать пожертвование"
 
 #. #-#-#-#-#  wp_to_diaspora.pot (WP to diaspora* 1.4.0)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
-#: lib/class-contextual-help.php:188
-#: lib/class-contextual-help.php:227
+#: lib/class-contextual-help.php:188 lib/class-contextual-help.php:227
 msgid "WP to diaspora*"
 msgstr "WP to diaspora*"
 
 #: lib/class-contextual-help.php:228
-msgid "For detailed information, refer to the contextual help on the %sWP to diaspora*%s settings page."
+msgid ""
+"For detailed information, refer to the contextual help on the %sWP to "
+"diaspora*%s settings page."
 msgstr ""
 
 #: lib/class-options.php:139
@@ -358,24 +359,30 @@ msgid "Password already set."
 msgstr "Пароль уже введён."
 
 #: lib/class-options.php:347
-msgid "If you would like to change the password type a new one. Otherwise leave this blank."
+msgid ""
+"If you would like to change the password type a new one. Otherwise leave "
+"this blank."
 msgstr "Для смены пароля, введи свой новый пароль. Иначе оставь поле пустым."
 
 #: lib/class-options.php:356
-msgid "Define the default posting behaviour for all posts here. These settings can be modified for each post individually, by changing the values in the \"WP to diaspora*\" meta box, which gets displayed in your post edit screen."
-msgstr "Задай здесь поведение по умолчанию для всех сообщений. Эти настройки можно изменить индивидуально для каждого сообщения, изменив значения в виджете \"WP to diaspora\", который отображается на экране редактирования пообщения."
+msgid ""
+"Define the default posting behaviour for all posts here. These settings can "
+"be modified for each post individually, by changing the values in the \"WP "
+"to diaspora*\" meta box, which gets displayed in your post edit screen."
+msgstr ""
+"Задай здесь поведение по умолчанию для всех сообщений. Эти настройки можно "
+"изменить индивидуально для каждого сообщения, изменив значения в виджете "
+"\"WP to diaspora\", который отображается на экране редактирования пообщения."
 
 #: lib/class-options.php:396
 msgid "None"
-msgstr ""
+msgstr "Ничего"
 
 #: lib/class-options.php:402
-#, fuzzy
 msgid "Choose which post types can be posted to diaspora*."
-msgstr "Выбери, какие теги следует репостить в diaspora*."
+msgstr "Выбери, какие типы можно репостить в diaspora*."
 
-#: lib/class-options.php:411
-#: lib/class-options.php:425
+#: lib/class-options.php:411 lib/class-options.php:425
 msgid "Yes"
 msgstr "Да"
 
@@ -401,11 +408,15 @@ msgstr "Не публиковать теги"
 
 #: lib/class-options.php:476
 msgid "Custom tags to add to all posts being posted to diaspora*."
-msgstr "Кастомные теги, которые следует добавлять ко всем сообщения при репосте в diaspora*."
+msgstr ""
+"Кастомные теги, которые следует добавлять ко всем сообщения при репосте в "
+"diaspora*."
 
 #: lib/class-options.php:488
 msgid "Custom tags to add to this post when it's posted to diaspora*."
-msgstr "Кастомные теги, которые следует добавлять к этому сообщению при репосте в diaspora*."
+msgstr ""
+"Кастомные теги, которые следует добавлять к этому сообщению при репосте в "
+"diaspora*."
 
 #: lib/class-options.php:492
 msgid "Separate tags with commas"
@@ -423,8 +434,7 @@ msgstr "Выбери сервисы для репостинга."
 msgid "Show available services on my pod."
 msgstr "Показать сервисы, доступные на моём сервере."
 
-#: lib/class-options.php:559
-#: wp-to-diaspora.php:366
+#: lib/class-options.php:559 wp-to-diaspora.php:366
 msgid "No services connected yet."
 msgstr "Ни один сервис ещё не подключен."
 
